RESOLVED FIXED32888
[Chromium] Garbage in transparent regions of images uploaded as textures
https://bugs.webkit.org/show_bug.cgi?id=32888
Summary [Chromium] Garbage in transparent regions of images uploaded as textures
Kenneth Russell
Reported 2009-12-22 16:29:36 PST
Tests of the Particles demo on http://khronos.org/webgl/wiki/Demo_Repository on Chromium on Mac OS X have shown that there is occasionally garbage in the transparent region of a texture whose source is an HTML Image. The Safari WebGL implementation is OK.
Attachments
Patch (22.02 KB, patch)
2009-12-22 16:50 PST, Kenneth Russell
no flags
Kenneth Russell
Comment 1 2009-12-22 16:50:32 PST
WebKit Review Bot
Comment 2 2009-12-22 16:51:40 PST
style-queue ran check-webkit-style on attachment 45412 [details] without any errors.
Eric Seidel (no email)
Comment 3 2009-12-22 17:58:24 PST
Comment on attachment 45412 [details] Patch I'm somewhat baffled by the complexity of this test. We'll probably end up wanting to share more code between tests at some point. Most modern tests are given english names instead of bug numbers, but this is OK. Thanks!
WebKit Commit Bot
Comment 4 2009-12-22 18:19:11 PST
Comment on attachment 45412 [details] Patch Clearing flags on attachment: 45412 Committed r52517: <http://trac.webkit.org/changeset/52517>
WebKit Commit Bot
Comment 5 2009-12-22 18:19:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.