2009-12-22  Kenneth Russell  <kbr@google.com>

Reviewed by Eric Seidel.

        [Chromium] Garbage in transparent regions of images uploaded as textures
        https://bugs.webkit.org/show_bug.cgi?id=32888

        * fast/canvas/webgl/bug-32888-expected.txt: Added.
        * fast/canvas/webgl/bug-32888.html: Added.
        * fast/canvas/webgl/resources/bug-32888-texture.png: Added.
2009-12-22  Kenneth Russell  <kbr@google.com>

        Reviewed by Eric Seidel.

        [Chromium] Garbage in transparent regions of images uploaded as textures
        https://bugs.webkit.org/show_bug.cgi?id=32888

        Test: fast/canvas/webgl/bug-32888.html (works in Safari / DumpRenderTree)

        * src/GraphicsContext3D.cpp:
        (WebCore::GraphicsContext3D::texImage2D):

Canonical link: https://commits.webkit.org/43930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52517 268f45cc-cd09-0410-ab3c-d52691b4dbfc